// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ShiftsPresetsApplicationService addShiftPreset adds a new shift preset 1`] = `
Array [
  ShiftPresets {
    "props": Object {
      "shiftPresets": Array [
        Object {
          "childrenCanAttend": true,
          "crewMembersCanAttend": true,
          "description": "",
          "location": "",
          "name": "Afternoon",
          "priceCents": 0,
        },
        Object {
          "childrenCanAttend": false,
          "crewMembersCanAttend": true,
          "description": "",
          "location": "",
          "name": "Crew activity",
          "priceCents": 0,
        },
        Object {
          "childrenCanAttend": true,
          "crewMembersCanAttend": true,
          "description": "",
          "location": "",
          "name": "External activity",
          "priceCents": 3000,
        },
        Object {
          "childrenCanAttend": true,
          "crewMembersCanAttend": true,
          "description": "",
          "location": "",
          "name": "Noon",
          "priceCents": 0,
        },
      ],
      "tenantId": "some-tenant-id",
    },
  },
]
`;

exports[`ShiftsPresetsApplicationService changeChildrenCanAttendPreset changes whether children can attend a shift preset 1`] = `
Array [
  ShiftPresets {
    "props": Object {
      "shiftPresets": Array [
        Object {
          "childrenCanAttend": true,
          "crewMembersCanAttend": true,
          "description": "",
          "location": "",
          "name": "Afternoon",
          "priceCents": 0,
        },
        Object {
          "childrenCanAttend": true,
          "crewMembersCanAttend": true,
          "description": "",
          "location": "",
          "name": "External activity",
          "priceCents": 3000,
        },
        Object {
          "childrenCanAttend": true,
          "crewMembersCanAttend": true,
          "description": "",
          "location": "",
          "name": "Crew activity",
          "priceCents": 0,
        },
      ],
      "tenantId": "some-tenant-id",
    },
  },
]
`;

exports[`ShiftsPresetsApplicationService changeCrewMembersCanAttendPreset changes whether crew members can attend a shift preset 1`] = `
Array [
  ShiftPresets {
    "props": Object {
      "shiftPresets": Array [
        Object {
          "childrenCanAttend": true,
          "crewMembersCanAttend": true,
          "description": "",
          "location": "",
          "name": "Afternoon",
          "priceCents": 0,
        },
        Object {
          "childrenCanAttend": true,
          "crewMembersCanAttend": true,
          "description": "",
          "location": "",
          "name": "External activity",
          "priceCents": 3000,
        },
        Object {
          "childrenCanAttend": false,
          "crewMembersCanAttend": false,
          "description": "",
          "location": "",
          "name": "Crew activity",
          "priceCents": 0,
        },
      ],
      "tenantId": "some-tenant-id",
    },
  },
]
`;

exports[`ShiftsPresetsApplicationService changeShiftPresetDescription changes the description of a shift preset 1`] = `
Array [
  ShiftPresets {
    "props": Object {
      "shiftPresets": Array [
        Object {
          "childrenCanAttend": true,
          "crewMembersCanAttend": true,
          "description": "",
          "location": "",
          "name": "Afternoon",
          "priceCents": 0,
        },
        Object {
          "childrenCanAttend": false,
          "crewMembersCanAttend": true,
          "description": "",
          "location": "",
          "name": "Crew activity",
          "priceCents": 0,
        },
        Object {
          "childrenCanAttend": true,
          "crewMembersCanAttend": true,
          "description": "Swimming",
          "location": "",
          "name": "External activity",
          "priceCents": 3000,
        },
      ],
      "tenantId": "some-tenant-id",
    },
  },
]
`;

exports[`ShiftsPresetsApplicationService changeShiftPresetLocation changes the location of a shift preset 1`] = `
Array [
  ShiftPresets {
    "props": Object {
      "shiftPresets": Array [
        Object {
          "childrenCanAttend": true,
          "crewMembersCanAttend": true,
          "description": "",
          "location": "",
          "name": "Afternoon",
          "priceCents": 0,
        },
        Object {
          "childrenCanAttend": true,
          "crewMembersCanAttend": true,
          "description": "",
          "location": "",
          "name": "External activity",
          "priceCents": 3000,
        },
        Object {
          "childrenCanAttend": false,
          "crewMembersCanAttend": true,
          "description": "",
          "location": "Bellewaerde",
          "name": "Crew activity",
          "priceCents": 0,
        },
      ],
      "tenantId": "some-tenant-id",
    },
  },
]
`;

exports[`ShiftsPresetsApplicationService changeShiftPresetPrice changes the price of a shift preset 1`] = `
Array [
  ShiftPresets {
    "props": Object {
      "shiftPresets": Array [
        Object {
          "childrenCanAttend": true,
          "crewMembersCanAttend": true,
          "description": "",
          "location": "",
          "name": "Afternoon",
          "priceCents": 0,
        },
        Object {
          "childrenCanAttend": true,
          "crewMembersCanAttend": true,
          "description": "",
          "location": "",
          "name": "External activity",
          "priceCents": 3000,
        },
        Object {
          "childrenCanAttend": false,
          "crewMembersCanAttend": true,
          "description": "",
          "location": "",
          "name": "Crew activity",
          "priceCents": 3450,
        },
      ],
      "tenantId": "some-tenant-id",
    },
  },
]
`;

exports[`ShiftsPresetsApplicationService removeShiftPreset removes a shift preset 1`] = `
Array [
  ShiftPresets {
    "props": Object {
      "shiftPresets": Array [
        Object {
          "childrenCanAttend": true,
          "crewMembersCanAttend": true,
          "description": "",
          "location": "",
          "name": "Afternoon",
          "priceCents": 0,
        },
        Object {
          "childrenCanAttend": true,
          "crewMembersCanAttend": true,
          "description": "",
          "location": "",
          "name": "External activity",
          "priceCents": 3000,
        },
      ],
      "tenantId": "some-tenant-id",
    },
  },
]
`;

exports[`ShiftsPresetsApplicationService renameShiftPreset renames a shift preset 1`] = `
Array [
  ShiftPresets {
    "props": Object {
      "shiftPresets": Array [
        Object {
          "childrenCanAttend": true,
          "crewMembersCanAttend": true,
          "description": "",
          "location": "",
          "name": "Afternoon",
          "priceCents": 0,
        },
        Object {
          "childrenCanAttend": true,
          "crewMembersCanAttend": true,
          "description": "",
          "location": "",
          "name": "External activity",
          "priceCents": 3000,
        },
        Object {
          "childrenCanAttend": false,
          "crewMembersCanAttend": true,
          "description": "",
          "location": "",
          "name": "My new name for Crew Activity",
          "priceCents": 0,
        },
      ],
      "tenantId": "some-tenant-id",
    },
  },
]
`;
